--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "dropzone": "^6.0.0-beta.2",
     "flat": "^6.0.1",
     "highlight.js": "^11.9.0",
+    "i18next": "^23.10.1",
     "js-beautify": "^1.14.11",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
@@ -43,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-i18next": "^14.1.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-transition-group": "^4.4.5",
