--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "backend": "npx nodemon",
     "frontend": "npm run dev --prefix frontend"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
