--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^14.1.0",
+    "react-json-view": "^1.21.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-transition-group": "^4.4.5",
