--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@left4code/tw-starter": "^3.1.36",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/moment": "^2.13.0",
     "apisauce": "^3.0.1",
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
@@ -41,6 +42,7 @@
     "litepicker": "^2.0.12",
     "lucide": "^0.304.0",
     "lucide-react": "^0.307.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
