--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,5 @@ JWT_SECRET = 58478592
 VERSION = 0.1
 NODE_ENV = production
 PORT = 5000
+GOOGLE_EMAIL_PASSWORD = xleq opks ackx afxp
+GOOGLE_EMAIL = kaosolution8@gmail.com
