--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.27",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
@@ -36,6 +38,8 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.13.0",
     "zod": "^3.22.4"
   }
