--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=kaosolution_kaosolution
+sonar.projectKey=ivaldes8_bpm
 sonar.organization=kaosolution
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=kaosolution
+#sonar.projectName=bpm
 #sonar.projectVersion=1.0
 
 
