connecting to mysql and getting ready base data

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL = mysql://root:madafaka@127.0.0.1:3306/bpm
 JWT_SECRET = 58478592
 VERSION = 0.1
 NODE_ENV = production
