--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,8 @@
-DATABASE_URL = mysql://root:madafaka@127.0.0.1:3306/bpm
+DATABASE_URL="mysql://root:madafaka@127.0.0.1:3306/bpm"
 JWT_SECRET = 58478592
 VERSION = 0.1
 NODE_ENV = production
 PORT = 5000
-GOOGLE_EMAIL_PASSWORD = xleq opks ackx afxp
-GOOGLE_EMAIL = kaosolution8@gmail.com
+MAIL_CLIENT = "gmail"
+MAIL_PASSWORD = "xleq opks ackx afxp",
+MAIL = "kaosolution8@gmail.com"
