--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,4 @@ sonar.organization=kaosolution
 #sonar.sourceEncoding=UTF-8
 
 sonar.exclusions=prisma/**
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
