coverage code fix

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,4 @@ sonar.organization=kaosolution
 
 sonar.exclusions=prisma/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.coverage.exclusions=**/*
