--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "backend": "npx nodemon",
     "frontend": "npm run dev --prefix frontend"
   },
@@ -19,11 +19,14 @@
     "@types/cors": "^2.8.17",
     "@types/exceljs": "^1.3.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.27",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
